Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4460

Using multiple NIDs for the same failnode or mgsnode is STILL broken for Lustre 2.4

XMLWordPrintable

    • 3
    • 12226

      It seems to me this bug is still there for 2 reasons:
      This is a follow-up of LU-3445.
      This ticket was supposed to fix this problem. However, it seems to me this bug is still there for 2 reasons:

      -the patch only take care of mkfs/tunefs and so there is still an upgrade issue if mountdata contains something like failover.node=10.3.0.228@o2ib,192.168.50.128@tcp
      The way to workaround this looks to be a writeconf, which has side effect. Is there some UPGRADE notes somewhere relative to this?

      -the patch seems to modify this kind of string

      --failnode=10.3.0.228@o2ib,192.168.50.128@tcp
      

      into

      --failnode=10.3.0.228@o2ib --failnode=10.3.0.228@o2ib
      

      Which is not the same. The first example refers to 1 failnode, with 2 NIDS to reach it. The second one refers to 2 different failnodes with 1 NID each

            yujian Jian Yu
            adegremont Aurelien Degremont (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: